objects/UPC_Quote_Document_Language_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>UPC_ASAP__c</fullName>
        <label>ASAP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Access_Service_ID__c</fullName>
        <label>Access Service ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Access_Technology__c</fullName>
        <label>Access Technology</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Additional_lines_needed__c</fullName>
        <label>Additional_lines_needed</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Additional_phone_number_w_o_Flat__c</fullName>
        <label>Additional phone number (w/o Flat)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Advice_Of_Charge__c</fullName>
        <label>Advice Of Charge</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Authentication_Code_Pt1__c</fullName>
        <label>Authentication Code Pt1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Authentication_Code_Pt2__c</fullName>
        <label>Authentication Code Pt2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BDTV_Details__c</fullName>
        <description>A semi-colon separated list of details to be displayed on quote and order confirmation documents in the Details section where Business Digital TV is shown. When separated, each item will be a bullet point in the document.</description>
        <inlineHelpText>A semi-colon separated list of details to be displayed on quote and order confirmation documents in the Details section where Business Digital TV is shown. When separated, each item will be a bullet point in the document.</inlineHelpText>
        <label>UPC BDTV Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Base_Cost_Phrase__c</fullName>
        <label>Base Cost Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Basic_Fee_Phrase__c</fullName>
        <label>Basic Fee Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Method_Title_Value__c</fullName>
        <label>Billing Method Title Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Preference_Title_Mob_Value__c</fullName>
        <label>Billing Preference Title Mob Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Billing_Preference_Title_Value__c</fullName>
        <label>Billing Preference Title Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Broadband_Speed_Phrase__c</fullName>
        <label>Broadband Speed Phrase</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Europe_Classic_Srv__c</fullName>
        <label>Business Mobile Europe Classic Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Europe_Classic__c</fullName>
        <label>Business Mobile Europe Classic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Europe_Premium_Srv__c</fullName>
        <label>Business Mobile Europe Premium Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Europe_Premium__c</fullName>
        <label>Business Mobile Europe Premium</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Basic_Service__c</fullName>
        <label>Business Mobile Swiss Basic Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Basic__c</fullName>
        <label>Business Mobile Swiss Basic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Classic_Srv__c</fullName>
        <label>Business Mobile Swiss Classic Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Classic__c</fullName>
        <label>Business Mobile Swiss Classic</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Premium_Srv__c</fullName>
        <label>Business Mobile Swiss Premium Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Mobile_Swiss_Premium__c</fullName>
        <label>Business Mobile Swiss Premium</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Package_100__c</fullName>
        <label>Business Package 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Package_300__c</fullName>
        <label>Business Package 300</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Business_Package_600__c</fullName>
        <label>Business Package 600</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CATV_Included_Phrase__c</fullName>
        <label>CATV Included Phrase</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CATV_Included_Short_Phrase__c</fullName>
        <label>CATV Included Short Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CATV_Not_Included_Phrase__c</fullName>
        <label>CATV Not Included Phrase</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CATV_Not_Included_Short_Phrase__c</fullName>
        <label>CATV Not Included Short Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Call_Forwarding__c</fullName>
        <label>Call Forwarding</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Call_Number__c</fullName>
        <label>Call Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Classic__c</fullName>
        <label>Classic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Combine_and_Save_Discount_Phrase__c</fullName>
        <label>Combine and Save Discount Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Company_Phrase__c</fullName>
        <label>Company Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contract_Term_Phrase__c</fullName>
        <label>Contract Term Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_DDI_Block_Name__c</fullName>
        <label>DDI Block Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Details_Digiphone__c</fullName>
        <label>Details DigiPhone</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Details_Header__c</fullName>
        <label>Details Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Details_Internet_Service__c</fullName>
        <label>Details Internet Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Details_Internet__c</fullName>
        <label>Details Internet</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Digital_TV_Channels__c</fullName>
        <label>Digital TV Channels</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Direct_Dial_Digits__c</fullName>
        <label>Direct Dial Digits</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Discount_Phrase__c</fullName>
        <label>Discount Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Flatrate_Europe__c</fullName>
        <label>Flatrate Europe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Flatrate_Export__c</fullName>
        <label>Flatrate Export</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Flatrate_Switzerland__c</fullName>
        <label>Flatrate Switzerland</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Flatrate_World__c</fullName>
        <label>Flatrate World</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Half_Yearly_Invoice_Value__c</fullName>
        <label>Half-Yearly Invoice Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Installation_by_Partner_Phrase__c</fullName>
        <label>Installation by Partner Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Instead_Of_Phrase__c</fullName>
        <label>Instead Of Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Internet_options__c</fullName>
        <label>Internet options</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_MSN_Block_Name__c</fullName>
        <label>MSN Block Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Min_Service_Period_Mob_Phrase__c</fullName>
        <label>Min Service Period Mob</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Minimum_Service_Period__c</fullName>
        <label>Minimum Service Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Backup__c</fullName>
        <description>The value to display on documents when the backup addon is selected</description>
        <label>Mobile Backup</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Monthly_Invoice_Value__c</fullName>
        <label>Monthly Invoice Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Next_regular_date__c</fullName>
        <label>Next regular date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_No_Value__c</fullName>
        <label>No Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Number_Of_SIP_Channels__c</fullName>
        <label>Number Of SIP Channels</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Number_holder__c</fullName>
        <label>Number holder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Option_Phrase__c</fullName>
        <label>Option Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PH_Call_Number__c</fullName>
        <label>PH Call Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PH_Number_holder__c</fullName>
        <label>PH Number holder</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PH_Porting_date__c</fullName>
        <label>PH Porting date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PH_Porting_details__c</fullName>
        <label>PH Porting details</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PH_Provider__c</fullName>
        <label>PH Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Paper_Bill_Value__c</fullName>
        <label>Paper Bill Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Partner_Network_Discount_Phrase__c</fullName>
        <label>Partner Network Discount Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Porting_date__c</fullName>
        <label>Porting date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Porting_details__c</fullName>
        <label>Porting details</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Private_Customer_Phrase__c</fullName>
        <label>Private Customer Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Property_Manager_Value__c</fullName>
        <label>Property Manager Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Provider__c</fullName>
        <label>Provider</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Quarterly_Invoice_Value__c</fullName>
        <label>Quarterly Invoice Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Radio_Stations__c</fullName>
        <label>Radio Stations</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Self_Installation__c</fullName>
        <label>Self Installation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Availability_Phrase__c</fullName>
        <label>Service Availability Phrase</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Header__c</fullName>
        <label>Service Header</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Level_Basic__c</fullName>
        <label>Service Level Basic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Startup_Discount_Phrase__c</fullName>
        <label>Startup Discount Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Support_Level_511__c</fullName>
        <label>Support Level 511</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TV_Option__c</fullName>
        <label>TV Option</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TV_Socket_Available_Phrase__c</fullName>
        <label>TV Socket Available Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_TV_Socket_Not_Available_Phrase__c</fullName>
        <label>TV Socket Not Available Phrase</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Telephone_Numbers_Incl__c</fullName>
        <label>Telephone Numbers Incl</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Unlimited_calls_International__c</fullName>
        <description>Commercial product description</description>
        <label>Unlimited calls International</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Voice_options__c</fullName>
        <label>Voice options</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Year__c</fullName>
        <label>Year</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Yearly_Invoice_Value__c</fullName>
        <label>Yearly Invoice Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Years__c</fullName>
        <label>Years</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Yes_Value__c</fullName>
        <label>Yes Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_eBanking_Value__c</fullName>
        <label>eBanking Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_eMail_Bill_Value__c</fullName>
        <label>eMail Bill Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Quote Document Language Settings</label>
    <listViews>
        <fullName>All_Quote_Document_Language_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>UPC_Language__c</columns>
        <columns>UPC_Base_Cost_Phrase__c</columns>
        <columns>UPC_Discount_Phrase__c</columns>
        <columns>UPC_Option_Phrase__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quote Document Language Settings</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Quote Document Language Settings</pluralLabel>
</CustomObject>